# real-estate

./: .gitignore  README.md
backend/: README.md  api.py  clear_cache.py  cron_setup.sh  geo.py  pyproject.toml  requirements.txt  reso_listings.py  setup_env.sh  start.sh
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: listings.py  places.py  system.py
backend/app/core/: config.py  maintenance.py
backend/app/models/: database.py  schemas.py
backend/app/services/: geocoding.py  places.py  reso.py
backend/requirements/: base.txt  dev.txt
frontend/: README.md  index.html  package.json  start.sh
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: index.js
frontend/src/components/common/: ActionButton.js  ErrorMessage.js  LoadingIndicator.js  common.css
frontend/src/components/listings/: AmenitiesSection.js  FinancialInfo.js  ImageGallery.js  ListingPanel.js  PropertyDetails.js  ThumbnailGallery.js  listings.css
frontend/src/components/map/: InfoBox.js  ListingMarker.js  MapComponent.js  NearbyPlaces.js  map.css
frontend/src/hooks/: useListings.js
frontend/src/utils/: formatters.js
src/: App.css  App.js
