[project]
name = "real-estate-api"
version = "0.1.0"
description = "Real Estate Listings API"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I"]
ignore = []
